--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 notebook==6.4.0
+ipykernel==6.0.2
+shap==0.39.0
+joblib==1.0.1
+pandas==1.3.0
+matplotlib==3.4.2
+seaborn==0.11.1
+scikit-learn==0.24.2
