churn library created

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,26 @@
+[GENERAL]
+EDA_PATH=images/eda
 [DATA]
 PATH=./data/bank_data.csv
-[EDA]
-IMAGES=images/eda
+[EDA_TARGET]
+TARGET_NAME=Attrition_Flag
+POSITIVE_CLASS=Attrited Customer
+TARGET_DISTRIBUTION_TITLE=Target Distribution
+TARGET_DISTRIBUTION_FILENAME=/target_distribution.png
+TARGET_CORRELATIONS_TITLE=Target Correlations
+TARGET_CORRELATIONS_FILENAME=/target_correlations.png
+[EDA_CATEGORICAL]
+CARDINALITY_THRESHOLD=20
+CATEGORICAL_CARDINALITY_TITLE=Categorical Features Cardinality
+CATEGORICAL_CARDINALITY_FILENAME=/categorical_cardinality.png
+CATEGORICAL_RATE_FILENAME=/categorical_data_rate_to_target.png
+CATEGORICAL_DISTRIBUTION_FILENAME=/categorical_data_distribution.png
+GRID_TITLE=%% of Churned Clients
+[EDA_NUMERICAL]
+NUMERICAL_FEATURES_CORRELATIONS_TITLE=Feature Correlations
+NUMERICAL_FEATURES_CORRELATIONS_FILENAME=/feature_correlations
+STRIPPLOT_FILENAME=/numerical_data_stripplot.png
+HISTOGRAM_FILENAME=/numerical_data_histogram.png
+STRIPPLOT_TITLE=Numerical Features Distribution by Target
+HISTOGRAM_TITLE=Numerical Features Histograms
+GRID_TITLE=Categorical Levels Distributions
