Create eda plot  functionality

--- a/config.ini
+++ b/config.ini
@@ -23,4 +23,4 @@ STRIPPLOT_FILENAME=/numerical_data_stripplot.png
 HISTOGRAM_FILENAME=/numerical_data_histogram.png
 STRIPPLOT_TITLE=Numerical Features Distribution by Target
 HISTOGRAM_TITLE=Numerical Features Histograms
-GRID_TITLE=Categorical Levels Distributions
+GRID_TITLE=Categorical Levels %% of Observations
