Add boxplot plotting functionality

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,8 @@ NUMERICAL_FEATURES_CORRELATIONS_TITLE=Feature Correlations
 NUMERICAL_FEATURES_CORRELATIONS_FILENAME=/feature_correlations
 STRIPPLOT_FILENAME=/numerical_data_stripplot.png
 HISTOGRAM_FILENAME=/numerical_data_histogram.png
+BOXPLOT_FILENAME=/numerical_data_boxplot.png
 STRIPPLOT_TITLE=Numerical Features Distribution by Target
 HISTOGRAM_TITLE=Numerical Features Histograms
+BOXPLOT_TITLE=Numerical Features Boxplots
 GRID_TITLE=Categorical Levels %% of Observations
